[gd_scene load_steps=3 format=3 uid="uid://c1h7ore66nttm"]

[ext_resource type="Script" path="res://Scripts/Actors/ItemSubject.gd" id="1_804rc"]
[ext_resource type="Theme" uid="uid://d3l8owfupvwbp" path="res://Theme/ListTheme.tres" id="2_nlydd"]

[node name="ItemSubject" type="Control"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -60.0
offset_bottom = -700.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_804rc")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_right = 230.0
offset_bottom = 80.0
mouse_filter = 1
theme = ExtResource("2_nlydd")
text = "subject title"
text_overrun_behavior = 1
clip_text = true

[node name="ButtonRemove" type="Button" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 12.0
offset_right = 300.0
offset_bottom = 72.0
mouse_filter = 1
theme = ExtResource("2_nlydd")
text = "X"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonRemove" to="." method="_on_button_remove_pressed"]
